trying to fix double scroll bar (pc) and overflow (mobile) issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,7 @@
   }
   html,body
 {
-    overflow-x: hidden; 
-    height:auto;
+    overflow-x: initial; 
 }
 .odibee-sans-regular {
     font-family: "Odibee Sans", sans-serif;
